# shadowsocks-gui

./: CMakeLists.txt  README.md
scripts/: bootstrap-debian.sh  setup_debian_build.sh
src/: CMakeLists.txt  CMakeLists.txt.rej  confighelper.cpp  confighelper.h  confighelper.h.rej  connection.h  connectionitem.h  connectiontablemodel.h  editdialog.h  icons.qrc  ip4validator.h  main.cpp  mainwindow.cpp  mainwindow.cpp.rej  mainwindow.ui  shadowsocks-gui.desktop  ss-gui.rc  statusnotifier.cpp  statusnotifier.cpp.rej  translations.qrc
src/i18n/: ss-gui_zh_CN.qm  ss-gui_zh_TW.qm
